Kubernetes/Istio-System/kiali/kiali-ingress-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-routingrules
  namespace: istio-system
spec:
  gateways:
  - dev-01/istio-ingressgateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        exact: /kiali
    redirect:
      uri: /kiali/
  - match:
    - uri:
        prefix: /kiali/
    rewrite:
      uri: /kiali/
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
